Change log for zeit.web
=======================

2.33 (unreleased)
-----------------

- HOTFIX: Fix shop carousel teaser uniqueId

- ZON-2418: Update webtrekk page parameter 10


2.32 (2015-11-24)
-----------------

- HOTFIX: Style adlabels for iqd 2


2.31 (2015-11-24)
-----------------

- HOTFIX: Style adlabels for iqd 

- ZON-2347: Shop carousel: consolidate two teaser links into one

- ZON-2421: Framebuilder - first steps

- ZON-2353: Adapt wording in Jobteaser

- ZON-1601: Add mobile TOC

- FIX: Style ZMO/zett icons on topicteaser

- FIX: Remove padding from ZMO parquet


2.30 (2015-11-23)
-----------------

- DEV-752: Prepare spektrum feed to use category supertitle

- ZON-2395: IVW-Verpixelung for video plays

- ZON-2413: Disect default teaser sticker edgecasing, handle feature longforms

- ZON-2414: Use pagetitle in twitter:title meta tag

- ZON-2404: Show comment replies in ZMO

- ZON-2261: Use configured fallback sharing image for breaking news articles
  that don't have an article image yet

- ZON-2358: Tweak collapse comment button

- ZON-2291: Implement author rss

- MAINT: Update pyramid to 1.5.7

- FIX: Quote uniqueIds in Solr queries using quotes not brackets


2.29 (2015-11-20)
-----------------

- HOTFIX: Fix iOS' 9 Safari specific misbehaviour

- ZON-2387: Rebuild ze.tt parquet to mimic Spektrum/ZMO parquet

- ZON-2393: Replace adlabel span by css content to improve ad reloading

- FIX: Displaying content with invalid timestamps

- FIX: Caching content with non-ascii uniqueIds

- FIX: Return HTTP 400 Bad Request for URLs with invalid unicode

- FIX: Don't throw 404s if ranking area is empty


2.28 (2015-11-17)
-----------------

- ZON-2214: Decrease timeouts for reach.zeit.de

- ZON-2388: Tweak Navi to make Spiele reappear

- ZON-2331: AdReloading wrapper script

- ZON-2159: Fill up first-page of paginated, ranking CPs with deduped content

- FIX: Disable article-lineage tests for Jenkins

- FIX: Add missing teaser style to ZMO parquet teaser
