@@ -10,6 +10,7 @@
         {{ lama.use_svg_icon('arrow-articlelineage-left', 'article-lineage__link-icon article-lineage__link-icon--prev', request) }}
         <span class="article-lineage__link-text article-lineage__link-text--prev">
             <span class="article-lineage__link-kicker">{% if predecessor.uniqueId == 'http://xml.zeit.de/index' %}ZEIT ONLINE{% else %}Voriger Artikel{% endif %}</span>
+            <span class="article-lineage__link-supertitle">{{ predecessor.supertitle }}</span>
             <span class="article-lineage__link-title">{{ predecessor.title }}</span>
         </span>
     </a>
@@ -18,6 +19,7 @@
         {{ lama.use_svg_icon('arrow-articlelineage-right', 'article-lineage__link-icon article-lineage__link-icon--next', request) }}
         <span class="article-lineage__link-text article-lineage__link-text--next">
             <span class="article-lineage__link-kicker">{% if successor.uniqueId == 'http://xml.zeit.de/index' %}ZEIT ONLINE{% else %}Nächster Artikel{% endif %}</span>
+            <span class="article-lineage__link-supertitle">{{ successor.supertitle }}</span>
             <span class="article-lineage__link-title">{{ successor.title }}</span>
         </span>
     </a>
